fix: Update styles to be a little better on mobile

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,11 +1,11 @@
 .container {
   position: relative;
-  min-height: 100vh;
+  min-height: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   color: white;
 }
 
