--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,25 +13,56 @@
   font-display: swap;
 }
 
-html,
-body {
-  padding: 0;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
   margin: 0;
+}
+
+html,
+body,
+/* Next wraps our application in a div with id="__next" */
+#__next {
+  height: 100%;
 }
 
 body {
   font-family: "CircularStd-Black";
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
 }
 
-* {
-  box-sizing: border-box;
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
 
-canvas {
-  position: absolute;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+#root,
+#__next {
+  isolation: isolate;
 }
